@@ -7,6 +7,7 @@ AllOverIt
   * Improvements to IAsyncCommand and AsyncCommandPipeline - now includes a cancellation token
   * Added MemberInfo extension method CreateMemberAccessLambda()
   * Renamed IsGenericNullableType() to IsNullableType()
+  * Added TypeExtensions GetInstanceMethod() and GetStaticMethod()
 
   * Added compiled property get/set methods GetCompiledPropertyGet() and GetCompiledPropertySet()
                     *******************************************************
